---
source: tests/common/mod.rs
expression: content
---
name: publish

on:
  push:
    tags:
      - "v*"

jobs:
  publish-cargo-rust-binary:
    uses: SoftengPoliTo/cargo-rust-binary/.github/workflows/publish-template.yml@main
    with:
      crate: cargo-rust-binary
    secrets: inherit
